// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AnalysisValue /> renders correctly with props 1`] = `
<Flex
  alignContent="stretch"
  alignItems="center"
  direction="row"
  justifyContent="flex-start"
  style={
    Object {
      "height": "21px",
    }
  }
  wrap="nowrap"
>
  <FlexItem
    alignSelf={null}
    basis="auto"
    grow={0}
    shrink={1}
  >
    <Label
      bsClass="label"
      bsStyle="default"
    >
      test
    </Label>
  </FlexItem>
  <FlexItem
    alignSelf={null}
    basis="auto"
    grow={0}
    pad={5}
    shrink={1}
  >
    <strong
      className="text-danger"
    >
      example
    </strong>
  </FlexItem>
</Flex>
`;

exports[`<AnalysisValue /> renders correctly without props 1`] = `
<Flex
  alignContent="stretch"
  alignItems="center"
  direction="row"
  justifyContent="flex-start"
  style={
    Object {
      "height": "21px",
    }
  }
  wrap="nowrap"
>
  <FlexItem
    alignSelf={null}
    basis="auto"
    grow={0}
    shrink={1}
  >
    <Label
      bsClass="label"
      bsStyle="default"
    />
  </FlexItem>
  <FlexItem
    alignSelf={null}
    basis="auto"
    grow={0}
    pad={5}
    shrink={1}
  >
    <strong
      className="text-undefined"
    />
  </FlexItem>
</Flex>
`;
